Add 4 pages content

--- a/index.html
+++ b/index.html
@@ -1949,7 +1949,7 @@
             <div class="page hidden" id="My-journey">
 
                 <div class="heading">
-                    <h3>My journey : </h3>
+                    <h3>My coding journey : </h3>
                 </div>
 
                 <hr>
@@ -1959,10 +1959,121 @@
                     <ul class="outer-list">
 
                         <li>
-                            <p></p>
+                            <p>My coding <a href="">journey</a> began when I joined a BCA course, driven by my deep
+                                <a href="">curiosity</a> about how
+                                technology works and how it shapes the world.
+                            </p>
                         </li>
 
-                        <ul class="inner-list"></ul>
+                        <ul class="inner-list">
+                            <li>In my first year of college, C language was introduced in the curriculum, marking my
+                                first step into the world of programming. Eager to explore further, I turned to <a
+                                    href="">Apna
+                                    College YouTube channel</a> and started learning C programming with <a href="">a one
+                                    shot C
+                                    language
+                                    tutorial.</a></li>
+
+                            <li>My approach was simple yet powerful: I asked myself, “What can be converted into a
+                                program?” This <a href="">mindset</a> led me to build over 80 C programs, including a
+                                700-800 line
+                                <a href="">project</a> on number system conversion, where I applied functions
+                                extensively. This
+                                progress made my logic building <a href="">skills</a> to <a href="">grow.</a>
+                            </li>
+                        </ul>
+
+                        <li>
+                            <p>As my interest in coding grew, I decided to explore web development.I started learning
+                                HTML and CSS through Apne College’s YouTube channel.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>However, I faced a major obstacle—I didn’t have a laptop, which made hands-on practice
+                                difficult. But that didn’t stop me. In June, I finally got my first laptop, and that was
+                                a turning point in my journey.</li>
+
+                            <li>I immediately dived into web development, where i first created <a href="">Amazon
+                                    website clone
+                                    from Apna College’s tutorial.</a> Then i was following <a href="">Coding Lab’s
+                                    YouTube
+                                    tutorials</a>, and
+                                began building numerous HTML-CSS mini-projects. Which i pushed here in my
+                                <a href="">HTML-CSS-Projects repo on Github.</a>
+                            </li>
+
+                            <li>To stay accountable and motivated, I started sharing my coding journey on <a
+                                    href="">LinkedIn</a> as part of
+                                the #100DaysOfCode challenge.</li>
+                        </ul>
+
+                        <li>
+                            <p>My <a href="">dedication</a> and <a href="">consistency</a> led to bigger projects. I
+                                successfully cloned two more
+                                websites
+                                Netflix and Zomato applying my growing knowledge of HTML and CSS.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>As I progressed, I realized the need for more functionality in my web projects, which
+                                led me to learn JavaScript from the same Apna College Youtube channel. With JavaScript
+                                in my toolkit, I expanded my projects,
+                                creating a travel website, a coffee website, and many more.</li>
+
+                            <li>You can check out all <a href="">my work on GitHub</a>, where I document my progress and
+                                showcase my
+                                projects.</li>
+                        </ul>
+
+                        <li>
+                            <p>Also in October month i participated in <a href="">HacktoberFest 2024.</a> And completed
+                                it
+                                successfully. Making my presence in <a href="">Open-source contributions.</a></p>
+                        </li>
+
+                        <li>
+                            <p>Recently, I also started learning C++ and am currently diving into <a href="">Data
+                                    Structures and
+                                    Algorithms (DSA) using Apna College’s YouTube channel.</a> Learning DSA has been a
+                                new and
+                                exciting challenge, helping me build strong <a href="">problem-solving skills</a> and
+                                preparing me for
+                                future opportunities in tech. And i am solving problems on platforms like <a
+                                    href="">LeetCode</a> and
+                                <a href="">HackerRank.</a>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p>Now, coding has become an integral part of my life.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>I am currently on my third #100DaysOfCode challenge, with over 200 days of consistency
+                                on LinkedIn.</li>
+
+                            <li>Alongside coding, I have expanded my online presence to <a href="">Twitter</a>, where I
+                                share my
+                                learnings and connect with like-minded developers.</li>
+
+                            <li><a href="">Networking</a>, collaborations, and open-source contributions have
+                                significantly enriched my
+                                experience, allowing me to learn from others and contribute to the tech community.</li>
+                        </ul>
+
+                        <li>
+                            <p>This journey has been an incredible ride filled with consistency, discipline, and
+                                passion.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>To document my learning experiences, I started a project called Dev Diary, where I
+                                summarize everything I have learned so far.</li>
+
+                            <li>As I continue exploring deeper aspects of coding, I will keep adding more insights to
+                                it. My journey is far from over—this is just the beginning, and I am excited to see
+                                where it takes me next!</li>
+                        </ul>
 
                     </ul>
 
@@ -1971,7 +2082,7 @@
                 <hr>
 
                 <div class="footer">
-                    <p></p>
+                    <p>“The only way to do great work is to love what you do.” — Steve Jobs</p>
                 </div>
 
             </div>
@@ -1989,10 +2100,53 @@
                     <ul class="outer-list">
 
                         <li>
-                            <p></p>
+                            <p>Mindset is a defining trait that sets individuals apart and plays a crucial role in
+                                achieving success.</p>
                         </li>
 
-                        <ul class="inner-list"></ul>
+                        <ul class="inner-list">
+                            <li>It is the foundation upon which great innovators like Steve Jobs, Elon Musk, and Mark
+                                Zuckerberg built their legacies.</li>
+
+                            <li>These visionaries didn’t just follow conventional paths; they had a revolutionary
+                                mindset that pushed them to think beyond limits and change the world.</li>
+
+                            <li>Having the right mindset is especially important in the tech field, where progress is
+                                driven by those who dare to innovate.</li>
+
+                            <li>While starting with a nine-to-five job can be a stepping stone, true impact comes from
+                                going beyond routine work and actively contributing to technological advancements.</li>
+                        </ul>
+
+                        <li>
+                            <p>A strong mindset fuels creativity, resilience, and <a href="">problem-solving</a>
+                                abilities.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>It helps individuals see challenges as opportunities and failures as learning
+                                experiences. Your mindset is centered on using technology and <a href="">skills</a> to
+                                create something
+                                groundbreaking—something that doesn’t just exist within the field but transforms it
+                                entirely.</li>
+
+                            <li>Whether it's developing revolutionary software, designing impactful websites, or
+                                creating applications that solve real-world problems, every step taken with the right
+                                mindset contributes to progress.</li>
+                        </ul>
+
+                        <li>
+                            <p>Technology has the power to shape societies, improve lives, and redefine industries, and
+                                those who adopt a problem-solving, innovation-driven mindset will lead this
+                                transformation.</p>
+                        </li>
+
+                        <li>
+                            <p>A person with this mindset does not just follow trends but creates them. They don’t just
+                                work within a system but aim to redefine it. In essence, mindset is the key to unlocking
+                                one’s full potential, driving meaningful change, and leaving a lasting mark on the world
+                                of technology.</p>
+                        </li>
 
                     </ul>
 
@@ -2001,7 +2155,9 @@
                 <hr>
 
                 <div class="footer">
-                    <p></p>
+                    <p>What is your mindset? How do you plan to shape the future of technology? Share it with me on my
+                        <a href="">Twitter.</a>
+                    </p>
                 </div>
 
             </div>
@@ -2049,10 +2205,57 @@
                     <ul class="outer-list">
 
                         <li>
-                            <p></p>
+                            <p>
+                                The journey of becoming a great developer is not just about writing code; it’s about
+                                resilience, patience, and continuous <a href="">growth.</a></p>
                         </li>
 
-                        <ul class="inner-list"></ul>
+                        <ul class="inner-list">
+                            <li>Once you take that first step with <a href="">consistency</a> and <a
+                                    href="">discipline</a>, coding starts becoming an
+                                integral part of your life. However, along this path, doubts and challenges are
+                                inevitable.</li>
+
+                            <li>You might question whether you can make an impact in the tech field or compete with
+                                others in this highly <a href="">competitive</a> space.</li>
+
+                            <li>There will be days when you struggle to grasp new concepts, when progress feels slow, or
+                                when your motivation fades. But these moments of self-doubt are a natural part of any
+                                learning journey.</li>
+                        </ul>
+
+                        <li>
+                            <p>The key to overcoming these challenges is to trust the process and remind yourself of how
+                                far you've already come.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Growth doesn't happen overnight—it happens through small, consistent efforts every
+                                single day.</li>
+
+                            <li>Even when progress feels invisible, your <a href="">dedication</a> is shaping you into a
+                                better
+                                developer. Whenever you feel stuck, look back at your early <a href="">projects</a>,
+                                reflect on the
+                                knowledge you've gained, and take pride in your journey.</li>
+                        </ul>
+
+                        <li>
+                            <p>Success in coding, as in life, is not about sprinting to the finish line; it's about
+                                showing up daily and improving bit by bit.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Instead of being overwhelmed by the bigger picture, focus on daily progress—writing even
+                                one line of code, <a href="">solving one problem</a>, or learning one new concept is a
+                                step forward.
+                            </li>
+
+                            <li>Stay committed, push through self-doubt, and embrace the process. Keep refining your
+                                skills, keep sharing your progress, and keep building. With persistence, consistency,
+                                and belief in yourself, you won’t just be a developer—you’ll be a great one, capable of
+                                making a real impact in the tech world.</li>
+                        </ul>
 
                     </ul>
 
@@ -2061,7 +2264,7 @@
                 <hr>
 
                 <div class="footer">
-                    <p></p>
+                    <p>"Start your own journey today by coding at least 1% daily!"</p>
                 </div>
 
             </div>
@@ -2229,10 +2432,73 @@
                     <ul class="outer-list">
 
                         <li>
-                            <p></p>
+                            <p>Open-source contributions are crucial for both developers and the tech community,
+                                offering
+                                a platform for collaboration, learning, and innovation.</p>
                         </li>
 
-                        <ul class="inner-list"></ul>
+                        <ul class="inner-list">
+                            <li>They allow developers to sharpen their <a href="">skills</a>, work on real-world <a
+                                    href="">projects</a>, and gain
+                                practical experience in coding, debugging, and <a href="">problem-solving.</a></li>
+
+                            <li>By contributing to open-source projects, developers get exposure to diverse codebases,
+                                which helps them understand different coding styles, architectures, and best practices
+                            </li>
+
+                            <li>This skill is especially valuable in professional environments where teamwork and the
+                                ability to navigate unfamiliar code are essential.</li>
+                        </ul>
+
+                        <li>
+                            <p>Many big companies like Google, Microsoft, and Meta maintain open-source repositories,
+                                encouraging global contributions to enhance project efficiency, scalability, and user
+                                experience.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Open source fosters a culture of knowledge-sharing and community-driven development,
+                                where developers from different backgrounds and expertise levels can collaborate, review
+                                each other's work, and improve software collectively.</li>
+                        </ul>
+
+                        <li>
+                            <p>Additionally, open-source contributions are highly beneficial for a developer’s resume,
+                                as they demonstrate hands-on experience, technical proficiency, and the ability to work
+                                in teams.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Participating in open-source programs like <a href="">Hacktoberfest</a>, <a
+                                    href="">GirlScript
+                                    Summer of Code</a>,
+                                <a href="">Google Summer of Code (GSoC)</a>, and <a href="">Outreachy</a> can provide
+                                structured mentorship,
+                                <a href="">networking</a> opportunities, and even job prospects.
+                            </li>
+
+                            <li>These programs help developers gain recognition in the community, build credibility, and
+                                potentially contribute to major industry projects.</li>
+                        </ul>
+
+                        <li>
+                            <p>Moreover, open source empowers developers to solve real-world problems, create impactful
+                                software, and give back to the community.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>It encourages continuous learning and <a href="">growth</a> while promoting the idea
+                                that technology
+                                should be accessible, transparent, and collaborative.</li>
+
+                            <li>Whether fixing bugs, adding features, writing documentation, or optimizing performance,
+                                every contribution matters.</li>
+                        </ul>
+
+                        <li>
+                            <p>By actively engaging in open-source, developers not only improve their coding skills but
+                                also become part of a global movement that shapes the future of technology.</p>
+                        </li>
 
                     </ul>
 
@@ -2241,7 +2507,8 @@
                 <hr>
 
                 <div class="footer">
-                    <p></p>
+                    <p>"Start contributing today! Check out some open-source projects on GitHub and begin your journey."
+                    </p>
                 </div>
 
             </div>
