--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 
 <body>
 
+    <div class="navbar hidden">
+
+        <div class="menu-btn" id="menu-btn"><i class="fa-solid fa-bars"></i></div>
+
+        <div class="nav-image">
+            <img src="images/diary2.png" alt="">
+        </div>
+
+        <div class="nav-name">
+            <a href="">Aditya Chandel</a>
+        </div>
+
+    </div>
+
     <div class="container">
 
         <!-- left column -->
