Added target = blank for some links

--- a/index.html
+++ b/index.html
@@ -261,10 +261,12 @@
                     <p>Personal bits of learning, open for everyone :)</p>
 
                     <ul>
-                        <li>🛠️ Explore this <a href="https://github.com/TonyStark-19/Dev-Diary">Dev Diary on
+                        <li>🛠️ Explore this <a target="_blank" href="https://github.com/TonyStark-19/Dev-Diary">Dev
+                                Diary on
                                 GitHub.</a> And if you found something
-                            useful? ⭐ <a href="https://github.com/TonyStark-19/Dev-Diary">Star the repo</a> and help it
-                            grow!"</li>
+                            useful? ⭐ <a target="_blank" href="https://github.com/TonyStark-19/Dev-Diary">Star the
+                                repo</a> and help it
+                            grow!</li>
                         <li>Welcome to my Dev Diary! This is a space where I document my coding journey—projects,
                             lessons, challenges, and useful insights I pick up along the way. Whether you're a beginner
                             or an experienced developer, I hope you find something useful here.</li>
