Added theme toggle btn

--- a/index.html
+++ b/index.html
@@ -14,23 +14,27 @@
 
 <body>
 
-    <!-- Navbar hidden in the start -->
-    <div class="navbar hidden">
-
-        <div class="menu-btn" id="menu-btn"><i class="fa-solid fa-bars"></i></div>
-
-        <div class="nav-image">
-            <img src="images/diary2.png" alt="diary logo">
-        </div>
-
-        <div class="nav-name">
-            <a href="">Aditya Chandel</a>
-        </div>
-
-    </div>
-
     <!-- Container -->
-    <div class="container">
+    <div class="container light">
+
+        <!-- Navbar hidden in the start -->
+        <div class="navbar hidden light">
+
+            <div class="menu-btn" id="menu-btn"><i class="fa-solid fa-bars"></i></div>
+
+            <div class="nav-image">
+                <img src="images/diary2.png" alt="diary logo">
+            </div>
+
+            <div class="nav-name">
+                <a href="">Aditya Chandel</a>
+            </div>
+
+            <div class="theme-toggle">
+                <input class="theme-toggle-btn" type="checkbox">
+            </div>
+
+        </div>
 
         <!-- left column -->
         <div class="left-column">
@@ -39,8 +43,16 @@
                 <img src="images/diary2.png" alt="diary logo">
             </div>
 
-            <div class="name">
-                <a href="">Aditya Chandel</a>
+            <div class="wrapper">
+
+                <div class="theme-toggle">
+                    <input class="theme-toggle-btn-2" type="checkbox">
+                </div>
+
+                <div class="name">
+                    <a href="">Aditya Chandel</a>
+                </div>
+
             </div>
 
             <div class="search-box">
