Added error image in not found message

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <img src="images/diary2.png" alt="diary logo">
             </div>
 
-            <div class="nav-name">
-                <a href="">Aditya Chandel</a>
+            <div class="name" id="nav-name">
+                <a href="#Dev-Diary">Aditya Chandel</a>
             </div>
 
             <div class="theme-toggle">
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="name">
-                    <a href="">Aditya Chandel</a>
+                    <a href="#Dev-Diary">Aditya Chandel</a>
                 </div>
 
             </div>
@@ -248,6 +248,7 @@
             <!-- Not found message -->
             <div class="not-found">
                 <p>Oops! We couldn't find what you're looking for. Try a different keyword!</p>
+                <img src="images/error.png" alt="error-img">
             </div>
 
         </div>
