Added footer text

--- a/index.html
+++ b/index.html
@@ -274,15 +274,15 @@
                     <p>Personal bits of learning, open for everyone :)</p>
 
                     <ul>
+                        <li>Welcome to my Dev Diary! This is a space where I document my coding journey—projects,
+                            lessons, challenges, and useful insights I pick up along the way. Whether you're a beginner
+                            or an experienced developer, I hope you find something useful here.</li>
                         <li>🛠️ Explore this <a target="_blank" href="https://github.com/TonyStark-19/Dev-Diary">Dev
                                 Diary on
                                 GitHub.</a> And if you found something
                             useful? ⭐ <a target="_blank" href="https://github.com/TonyStark-19/Dev-Diary">Star the
                                 repo</a> and help it
                             grow!</li>
-                        <li>Welcome to my Dev Diary! This is a space where I document my coding journey—projects,
-                            lessons, challenges, and useful insights I pick up along the way. Whether you're a beginner
-                            or an experienced developer, I hope you find something useful here.</li>
                         <li>🗺️ Explore any topic you find interesting on the list!</li>
                         <li>📣 <a target="_blank" href="https://tonystark-19.github.io/Portfolio-Website/">Reach out</a>
                             if you want to
@@ -290,8 +290,6 @@
                         <li>💬 Got feedback or ideas? <a target="_blank"
                                 href="https://github.com/TonyStark-19/Dev-Diary/issues">Create
                                 an issue on GitHub</a>!</li>
-                        <li>Thanks for stopping by! I appreciate your support and would love to hear your thoughts.
-                        </li>
                     </ul>
                 </div>
 
@@ -302,16 +300,16 @@
                     <p>Photes by <a target="_blank" href="https://www.pexels.com/">pexels</a> and <a target="_blank"
                             href="https://pngtree.com/">pngtree.</a></p>
 
+                    <p>Project inspiration : <a target="_blank"
+                            href="https://handbook.davidgasquez.com/README">Handbook</a> by <a target="_blank"
+                            href="https://github.com/davidgasquez">David Gasquez</a></p>
+
                 </div>
 
                 <hr>
 
                 <div class="footer">
-
-                    <p>Project inspiration : <a target="_blank"
-                            href="https://handbook.davidgasquez.com/README">Handbook</a> by <a target="_blank"
-                            href="https://github.com/davidgasquez">David Gasquez</a></p>
-
+                    <p>Thanks for stopping by! I appreciate your support and would love to hear your thoughts.</p>
                 </div>
 
             </div>
@@ -3137,6 +3135,15 @@
                 </div>
 
             </div>
+
+            <!-- footer -->
+            <footer>
+
+                <div class="end-text">
+                    <p>Made with ❤️ by Aditya chandel :)</p>
+                </div>
+
+            </footer>
 
         </div>
 
