Added improvements and link

--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                                 for beginners to advanced learners focusing on coding, Data Structures, and Development.
                             </li>
                             <li><a target="_blank" href="https://www.youtube.com/@AmanDhattarwal">Aman
-                                    Dhattarwal</a>Covers tech
+                                    Dhattarwal </a>Covers tech
                                 updates, career guidance, and motivational content.</li>
                             <li><a target="_blank" href="https://www.youtube.com/@beerbiceps">beerbiceps</a> Offers
                                 engaging <a href="">podcasts</a>
@@ -1053,9 +1053,9 @@
 
                 <div class="footer">
                     <p>“Ready to start your first project? Check out <a target="_blank"
-                            href="https://github.com/TonyStark-19/HTML-CSS-Projects">My HTML-CSS mini projects repo on
-                            Github!</a>" This repo is filled with numerous HTML-CSS mini projects to begin your web dev
-                        journey.</p>
+                            href="https://html-css-projects-phi.vercel.app/">My HTML-CSS Mini Projects
+                            Website.</a>" This website is filled with numerous HTML-CSS mini projects to begin your web
+                        dev journey.</p>
                     <p>You can star it if you find it useful!</p>
                 </div>
 
@@ -1153,7 +1153,7 @@
                         <li>
                             <p>Here is <a target="_blank"
                                     href="https://www.youtube.com/playlist?list=PLfqMhTWNBTe137I_EPQd34TsgV6IO55pt">Apna
-                                    college DSA series playlist</a> which i am following as part of DSA
+                                    college DSA series playlist</a> which i am following as part of my DSA
                                 journey. I can highly recommend this channel for learning DSA to Web development.</p>
                         </li>
 
@@ -1586,8 +1586,8 @@
                         </ul>
 
                         <p>
-                            <li>My own experience of coding daily and sharing progress : As of January 24, 2025, I have
-                                been coding daily for nearly 200 days starting from june 2024.
+                            <li>My own experience of coding daily and sharing progress : As of March 28, 2025, I have
+                                been coding daily for nearly 260 days starting from june 2024.
                                 demonstrates that productivity is a direct result of consistency.</li>
                         </p>
 
@@ -2167,7 +2167,7 @@
                             <li>My approach was simple yet powerful: I asked myself, “What can be converted into a
                                 program?” This <a href="#Mindset">mindset</a> led me to build over 80 C programs,
                                 including a
-                                700-800 line
+                                928 line
                                 <a href="#Project-building">project</a> on number system conversion, where I applied
                                 functions
                                 extensively. This
@@ -2194,10 +2194,9 @@
                                     Lab’s
                                     YouTube
                                     tutorials</a>, and
-                                began building numerous HTML-CSS mini-projects. Which i pushed here in my
-                                <a target="_blank"
-                                    href="https://github.com/TonyStark-19/HTML-CSS-Projects">HTML-CSS-Projects repo on
-                                    Github.</a>
+                                began building numerous HTML-CSS mini-projects. Which i integrated here in my
+                                <a target="_blank" href="https://html-css-projects-phi.vercel.app/">HTML-CSS-Projects
+                                    Website.</a>
                             </li>
 
                             <li>To stay accountable and motivated, I started sharing my coding journey on <a
